@@ -15,6 +15,7 @@
 package com.starrocks.schema;
 
 import com.google.common.base.Joiner;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import org.apache.parquet.Strings;
 
@@ -92,7 +93,7 @@ public class MTable {
 
     public MTable withValues(String value) {
         String[] arr = value.split(",");
-        return withValues(List.of(arr));
+        return withValues(ImmutableList.of(arr));
     }
 
     public MTable withValues(List<String> values) {
@@ -102,7 +103,7 @@ public class MTable {
 
     public MTable withProperties(String value) {
         String[] arr = value.split(",");
-        return withProperties(List.of(arr));
+        return withProperties(ImmutableList.of(arr));
     }
 
     public MTable withProperties(List<String> values) {
